clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_16.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/va-arg-16.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn vafunction(%arg0: double, %arg1: double, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: double, %arg1: double):
        %17 = alloca double, "dummy1", align 8
        %18 = alloca double, "dummy2", align 8
        %19 = alloca rec___va_list_tag[1], "ap", align 16
        store %arg0, %17
        store %arg1, %18
        %20 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
        va_start %20
        scope {
            %71 = load %17 : double, align 8
            %72 = const 8.880000e+02 : double
            %73 = cmp ne %71, %72 : bool
            if %73 {
                %74 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %67 = load %18 : double, align 8
            %68 = const 9.990000e+02 : double
            %69 = cmp ne %67, %68 : bool
            if %69 {
                %70 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %62 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %63 = va_arg %62 : double
            %64 = const 1.000000e+00 : double
            %65 = cmp ne %63, %64 : bool
            if %65 {
                %66 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %57 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %58 = va_arg %57 : double
            %59 = const 2.000000e+00 : double
            %60 = cmp ne %58, %59 : bool
            if %60 {
                %61 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %52 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %53 = va_arg %52 : double
            %54 = const 3.000000e+00 : double
            %55 = cmp ne %53, %54 : bool
            if %55 {
                %56 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %47 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %48 = va_arg %47 : double
            %49 = const 4.000000e+00 : double
            %50 = cmp ne %48, %49 : bool
            if %50 {
                %51 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %42 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %43 = va_arg %42 : double
            %44 = const 5.000000e+00 : double
            %45 = cmp ne %43, %44 : bool
            if %45 {
                %46 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %37 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %38 = va_arg %37 : double
            %39 = const 6.000000e+00 : double
            %40 = cmp ne %38, %39 : bool
            if %40 {
                %41 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %32 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %33 = va_arg %32 : double
            %34 = const 7.000000e+00 : double
            %35 = cmp ne %33, %34 : bool
            if %35 {
                %36 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %27 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %28 = va_arg %27 : double
            %29 = const 8.000000e+00 : double
            %30 = cmp ne %28, %29 : bool
            if %30 {
                %31 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %22 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
            %23 = va_arg %22 : double
            %24 = const 9.000000e+00 : double
            %25 = cmp ne %23, %24 : bool
            if %25 {
                %26 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %21 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
        va_end %21
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 8.880000e+02 : double
    %3 = const 9.990000e+02 : double
    %4 = const 1.000000e+00 : double
    %5 = const 2.000000e+00 : double
    %6 = const 3.000000e+00 : double
    %7 = const 4.000000e+00 : double
    %8 = const 5.000000e+00 : double
    %9 = const 6.000000e+00 : double
    %10 = const 7.000000e+00 : double
    %11 = const 8.000000e+00 : double
    %12 = const 9.000000e+00 : double
    call @vafunction(%2, %3, %4, %5, %6, %7, %8, %9, %10, %11, %12) [all]
    %13 = get_global @exit : ((s32i) -> void)*
    %14 = const 0 : s32i
    call @exit(%14) [all]
    %15 = const 0 : s32i
    store %15, %0
    %16 = load %0 : s32i
    return %16
}
