clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_20.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/va-arg-20.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn foo(%arg2: rec___va_list_tag*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: rec___va_list_tag*):
        %14 = alloca rec___va_list_tag*, "v", align 8
        %15 = alloca u64i, "x", align 8
        store %arg2, %14
        %16 = load %14 : rec___va_list_tag*, align 8
        %17 = va_arg %16 : u64i
        store %17, %15, align 8
        scope {
            %18 = load %15 : u64i, align 8
            %19 = const 16 : u64i
            %20 = cmp ne %18, %19 : bool
            if %20 {
                %21 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn bar(%arg0: s8i, %arg1: s8i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i, %arg1: s8i):
        %8 = alloca s8i, "c", align 1
        %9 = alloca s8i, "d", align 1
        %10 = alloca rec___va_list_tag[1], "v", align 16
        store %arg0, %8
        store %arg1, %9
        %11 = cast(array_to_ptrdecay) %10 : rec___va_list_tag*
        va_start %11
        %12 = cast(array_to_ptrdecay) %10 : rec___va_list_tag*
        call @foo(%12) [all]
        %13 = cast(array_to_ptrdecay) %10 : rec___va_list_tag*
        va_end %13
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s8i
    %3 = const 0 : s8i
    %4 = const 16 : s64i
    call @bar(%2, %3, %4) [all]
    %5 = get_global @exit : ((s32i) -> void)*
    %6 = const 0 : s32i
    call @exit(%6) [all]
    %7 = load %0 : s32i
    return %7
}
