clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_23.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/va-arg-23.c" (c, x86_64-unknown-linux-gnu)
global __const.main.t : rec_two = Zero { ty: Named("rec_two") } [cir_private, default, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn foo(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i, %arg4: s32i, %arg5: rec_two*, %arg6: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i, %arg4: s32i, %arg5: rec_two*, %arg6: s32i):
        %15 = load %arg5 : rec_two
        %16 = alloca s32i, "a", align 4
        %17 = alloca s32i, "b", align 4
        %18 = alloca s32i, "c", align 4
        %19 = alloca s32i, "d", align 4
        %20 = alloca s32i, "e", align 4
        %21 = alloca rec_two, "f", align 8
        %22 = alloca s32i, "g", align 4
        %23 = alloca rec___va_list_tag[1], "args", align 16
        %24 = alloca s32i, "h", align 4
        store %arg0, %16
        store %arg1, %17
        store %arg2, %18
        store %arg3, %19
        store %arg4, %20
        store %15, %21
        store %arg6, %22
        %25 = cast(array_to_ptrdecay) %23 : rec___va_list_tag*
        va_start
        %26 = cast(array_to_ptrdecay) %23 : rec___va_list_tag*
        va_arg
        store %27, %24, align 4
        scope {
                %28 = load %22 : s32i, align 4
                %29 = const 1 : s32i
                cmp
                %31 = ternary %30 ? { : bool
                        %36 = const true : bool
                        yield %36
                } : {
                        %33 = load %24 : s32i, align 4
                        %34 = const 2 : s32i
                        cmp
                        yield %35
                }
                if %31 {
                        %32 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_two, "t", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.t : rec_two*
        copy
        %4 = const 0 : s32i
        %5 = const 0 : s32i
        %6 = const 0 : s32i
        %7 = const 0 : s32i
        %8 = const 0 : s32i
        %9 = const 1 : s32i
        %10 = const 2 : s32i
        %11 = load %1 : rec_two, align 8
        %12 = alloca rec_two, "byval", align 8
        store %11, %12
        call @foo(%4, %5, %6, %7, %8, %12, %9, %10) [all]
        %13 = const 0 : s32i
        store %13, %0
        %14 = load %0 : s32i
        return %14
}
