clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_4.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/va-arg-4.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[1] = Zero { ty: Array { element_type: Named("s8i"), size: 1 } } [cir_private, default, align 1, dso_local, constant]
global main.x : rec_big = ConstRecord { ty: Named("rec_big"), members: Array([ConstArray { ty: Array { element_type: Named("s8i"), size: 32 }, elts: Str("abc"), trailing_zeros_num: 1 }]) } [internal, default, align 1, dso_local]

fn abort() -> void [external, c, nothrow];
fn f(%arg0: rec_big*, %arg1: s8i*, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_big*, %arg1: s8i*):
        %13 = load %arg0 : rec_big
        %14 = alloca rec_big, "x", align 1
        %15 = alloca s8i*, "s", align 8
        %16 = alloca rec___va_list_tag[1], "ap", align 16
        store %13, %14
        store %arg1, %15
        scope {
                %34 = const 0 : s64i
                get_member
                get_element
                %37 = load %36 : s8i, align 1
                %38 = cast(integral) %37 : s32i
                %39 = const 97 : s32i
                cmp
                %41 = ternary %40 ? { : bool
                        %59 = const true : bool
                        yield %59
                } : {
                        %52 = const 1 : s64i
                        get_member
                        get_element
                        %55 = load %54 : s8i, align 1
                        %56 = cast(integral) %55 : s32i
                        %57 = const 98 : s32i
                        cmp
                        yield %58
                }
                %42 = ternary %41 ? { : bool
                        %51 = const true : bool
                        yield %51
                } : {
                        %44 = const 2 : s64i
                        get_member
                        get_element
                        %47 = load %46 : s8i, align 1
                        %48 = cast(integral) %47 : s32i
                        %49 = const 99 : s32i
                        cmp
                        yield %50
                }
                if %42 {
                        %43 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %17 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
        va_start
        scope {
                %29 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
                va_arg
                %31 = const 42 : s32i
                cmp
                if %32 {
                        %33 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %24 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
                va_arg
                %26 = const 120 : s32i
                cmp
                if %27 {
                        %28 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %19 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
                va_arg
                %21 = const 0 : s32i
                cmp
                if %22 {
                        %23 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %18 = cast(array_to_ptrdecay) %16 : rec___va_list_tag*
        va_end
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @main.x : rec_big*
        %3 = get_global @.str : s8i[1]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = const 42 : s32i
        %6 = const 120 : s32i
        %7 = const 0 : s32i
        %8 = load %2 : rec_big, align 1
        %9 = alloca rec_big, "byval", align 8
        store %8, %9
        call @f(%9, %4, %5, %6, %7) [all]
        %10 = get_global @exit : (s32i) -> void*
        %11 = const 0 : s32i
        call @exit(%11) [all]
        %12 = load %0 : s32i
        return %12
}
